<resources>
    <string name="app_name">Home Remote Control</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_email">This account does not exist</string>
    <string name="error_field_required">This field is required</string>
    <string name="logs_shortcut_short_label1">Web Interface</string>
    <string name="logs_shortcut_long_label1">Show Web Interface</string>
    <string name="logs_disabled_message1">Please login to show web interface</string>
    <string name="control_shortcut_short_label1">Controls</string>
    <string name="control_shortcut_long_label1">Show controls</string>
    <string name="control_disabled_message1">Please login to show controls</string>
    <string name="camera_shortcut_short_label1">Cameras</string>
    <string name="camera_shortcut_long_label1">Show camera feed</string>
    <string name="camera_disabled_message1">Please login to show cameras</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Navigation Drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="modes_array">
        <item>Disabled</item>
        <item>Manual Color</item>
        <item>RGB Fade</item>
        <item>RGB Blink</item>
        <item>White Fade</item>
        <item>Music Blink</item>
    </string-array>
    <string name="title_activity_logs">Web Interface</string>
    <string name="gates">Gates</string>
    <string name="close_car_gate">Close Car Gate</string>
    <string name="open_car_gate">Open Car gate</string>
    <string name="open_small_gate">Open Small Gate</string>
    <string name="lights_in_my_room">Lights in my room</string>
    <string name="lights_off">Lights Off</string>
    <string name="lights_on">Lights On</string>
    <string name="brightness_lower">Brightness -</string>
    <string name="brightness_higher">Brightness +</string>
    <string name="doors">Doors</string>
    <string name="lock_house_door">Lock House Door</string>
    <string name="unlock_house_door">Unlock House Door</string>
    <string name="lock_room_door">Lock Room Door</string>
    <string name="unlock_room_door">Unlock Room Door</string>
    <string name="rgb_lights_settings_control">RGB Lights Settings Control</string>
    <string name="mode">Mode</string>
    <string name="bright_low">Bright-</string>
    <string name="remote">Remote</string>
    <string name="bright_high">Bright+</string>
    <string name="rgb_color_picker">RGB Color Picker</string>
    <string name="color_picker">Color Picker</string>
    <string name="light_brightness">Light Brightness</string>
    <string name="rgb_brightness">RGB Brightness</string>
    <string name="rgb_speed">RGB Speed</string>
    <string name="administrative_options">Administrative options</string>
    <string name="test_led">Test LED</string>
    <string name="ring_a_bell">Ring a Bell</string>
    <string name="stop_server">Stop Server</string>
    <string name="reset_arduino">Reset Arduino</string>
    <string name="appwidget_text">Basic controls</string>
    <string name="add_widget">Add widget</string>

</resources>
