<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

   <shortcut
        android:shortcutId="logs"
        android:enabled="true"
        android:icon="@drawable/logs_icon"
        android:shortcutShortLabel="@string/logs_shortcut_short_label1"
        android:shortcutLongLabel="@string/logs_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/logs_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.no_ip.wqwdpxd.homeautomationwear_php"
            android:targetClass="org.no_ip.wqwdpxd.homeautomationwear_php.LogsActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="control"
        android:enabled="true"
        android:icon="@drawable/control_icon"
        android:shortcutShortLabel="@string/control_shortcut_short_label1"
        android:shortcutLongLabel="@string/control_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/control_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.no_ip.wqwdpxd.homeautomationwear_php"
            android:targetClass="org.no_ip.wqwdpxd.homeautomationwear_php.MainActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>



